@@ -637,16 +637,18 @@ public class GroupManager extends JavaPlugin {
                     		return true;
                     }
                     //VALIDANDO ARGUMENTOS
-                    if (args.length != 1) {
-                        sender.sendMessage(ChatColor.RED + "Review your arguments count! (/<command> <player>)");
+                    if ((args.length == 0) || (args.length > 2)) {
+                        sender.sendMessage(ChatColor.RED + "Review your arguments count! (/<command> <player> (+))");
                         return false;
                     }
+                    
                     if (validateOnlinePlayer) {
                         match = this.getServer().matchPlayer(args[0]);
                         if (match.size() != 1) {
                             sender.sendMessage(ChatColor.RED + "Player not found!");
                             return false;
-                        }
+                        } else
+                        	targetPlayer = this.getServer().getPlayer(match.get(0).getName());
                     }
                     if (match != null) {
                         auxUser = dataHolder.getUser(match.get(0).getName());
@@ -683,6 +685,18 @@ public class GroupManager extends JavaPlugin {
                             sender.sendMessage(ChatColor.YELLOW + "And all permissions from subgroups: " + auxString);
                         }
                     }
+                    
+                    //bukkit perms
+                    if ((args.length == 2) && (args[1].equalsIgnoreCase("+"))) {
+                    	if (targetPlayer != null) {
+                    		sender.sendMessage(ChatColor.YELLOW + "Superperms reports: ");
+                        	for(String line: BukkitPermissions.listPerms(targetPlayer))
+                        		sender.sendMessage(ChatColor.YELLOW + line);
+                        	
+                        }
+                    }
+                    
+                    
                     return true;
                 case manucheckp:
                     //VALIDANDO ESTADO DO SENDER
@@ -695,12 +709,14 @@ public class GroupManager extends JavaPlugin {
                         sender.sendMessage(ChatColor.RED + "Review your arguments count! (/<command> <player> <permission>)");
                         return false;
                     }
+                    
                     if (validateOnlinePlayer) {
                         match = this.getServer().matchPlayer(args[0]);
                         if (match.size() != 1) {
                             sender.sendMessage(ChatColor.RED + "Player not found!");
                             return false;
-                        }
+                        } else
+                        	targetPlayer = this.getServer().getPlayer(match.get(0).getName());
                     }
                     if (match != null) {
                         auxUser = dataHolder.getUser(match.get(0).getName());
@@ -730,6 +746,13 @@ public class GroupManager extends JavaPlugin {
                         }
                         sender.sendMessage(ChatColor.YELLOW + "Permission Node: " + permissionResult.accessLevel);
                     }
+                    
+                    // superperms
+                    if (targetPlayer != null) {
+                    	sender.sendMessage(ChatColor.YELLOW + "SuperPerms reports Node: " + targetPlayer.hasPermission(args[1]));
+                    }
+                    
+                    
                     return true;
                 case mangaddp:
                     //VALIDANDO ESTADO DO SENDER
